Added image gallery

--- a/gallery.html
+++ b/gallery.html
@@ -7,8 +7,8 @@
 </head>
 <body>
   <header>
-    <h1>Gallery</h1>
-    <nav>
+    <h1>My Gallery</h1>
+    <nav class="menu">
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
       <a href="gallery.html">Gallery</a>
@@ -17,8 +17,12 @@
   </header>
 
   <main>
-    <h2>My Photos / Projects</h2>
-    <p>Gallery coming soon. You can add images or links to your work here.</p>
+    <h2>My Work, Projects & Photos</h2>
+    <div class="gallery">
+      <img src="https://via.placeholder.com/300x200.png?text=Project+1" alt="Project 1">
+      <img src="https://via.placeholder.com/300x200.png?text=Project+2" alt="Project 2">
+      <img src="https://via.placeholder.com/300x200.png?text=Project+3" alt="Project 3">
+    </div>
   </main>
 
   <footer>
