--- a/index.html
+++ b/index.html
@@ -1,9 +1,28 @@
-<header>
-  <h1>Welcome to Precious' Website</h1>
-  <nav class="menu">
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="gallery.html">Gallery</a>
-    <a href="contact.html">Contact</a>
-  </nav>
-</header>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Precious | Home</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header>
+    <h1>Welcome to Precious' Website</h1>
+    <nav class="menu">
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="gallery.html">Gallery</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </header>
+
+  <main>
+    <h2>Hello, World!</h2>
+    <p>This is the home page of my website. I’m building this using Termux + GitHub Pages from my phone!</p>
+  </main>
+
+  <footer>
+    <p>© 2025 Precious. All rights reserved.</p>
+  </footer>
+</body>
+</html>
