Added hero section to homepage

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   </header>
 
   <main>
-    <h2>Hello, World!</h2>
-    <p>This is the home page of my website. I’m building this using Termux + GitHub Pages from my phone!</p>
+    <h>welcome to my World!</h2>
+    <p>I'm precious phillimon. young but intelligent I can develop your website and your app on affordable price just try me</p>
   </main>
 
   <footer>
