Added image gallery

--- a/gallery.html
+++ b/gallery.html
@@ -19,7 +19,7 @@
   <main>
     <h2>My Work, Projects & Photos</h2>
     <div class="gallery">
-      <img src="https://via.placeholder.com/300x200.png?text=Project+1" alt="Project 1">
+      <img src="https://via.placeholder.com/300x200.png?text=Project+1" alt="content://com.android.providers.media.documents/document/image%3A1000009639">
       <img src="https://via.placeholder.com/300x200.png?text=Project+2" alt="Project 2">
       <img src="https://via.placeholder.com/300x200.png?text=Project+3" alt="Project 3">
     </div>
