--- a/gallery.html
+++ b/gallery.html
@@ -19,7 +19,7 @@
   <main>
     <h2>My Work, Projects & Photos</h2>
     <div class="gallery">
-      <img src="content://com.android.providers.media.documents/document/image%3A1000005001.com/300×200.text=project+1" alt="project 2">
+      <img src="content://com.android.providers.media.documents/document/image%3A1000005001.com/500×500.png?.text=project+1" alt="project 2">
       <img src="https://via.placeholder.com/300x200.png?text=Project+2" alt="Project 2">
       <img src="https://via.placeholder.com/300x200.png?text=Project+3" alt="Project 3">
     </div>
