--- a/index.html
+++ b/index.html
@@ -1,74 +1,68 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Precious Portfolio</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>RealVisual Graphix</title>
   <link rel="stylesheet" href="style.css" />
 </head>
-<body>
-
-  <!-- Header -->
-  <header>
+<body>  <!-- Header -->  <header>
     <div class="container">
-      <img src="images/logo.png" class="logo" alt="Logo" />
+      <img src="images/logo.png" alt="Logo" class="logo">
       <nav>
         <ul>
           <li><a href="#home">Home</a></li>
           <li><a href="#services">Services</a></li>
+          <li><a href="#portfolio">Portfolio</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
     </div>
-  </header>
-
-  <!-- Hero Section -->
-  <section id="home" class="hero">
-    <div class="hero-content">
-      <h1>We Are <span>Creative Designers</span></h1>
-      <p>We build modern, responsive websites that stand out.</p>
+  </header>  <!-- Hero -->  <section id="home" class="hero">
+    <div class="content">
+      <h1>Creative Design for Modern Brands</h1>
+      <p>We turn ideas into digital reality. Unique designs. Bold strategies. Tailored branding.</p>
+      <a href="#contact" class="btn">Let’s Talk</a>
     </div>
-    <div class="hero-img">
-      <img src="images/hero.jpg" alt="Creative Work">
-    </div>
-  </section>
-
-  <!-- Services Section -->
-  <section id="services" class="services">
-    <h2>What We Offer</h2>
-    <div class="services-grid">
-      <div class="service-box">
-        <h3>Web Design</h3>
-        <p>Clean, modern, and user-focused designs.</p>
-      </div>
-      <div class="service-box">
-        <h3>UI/UX</h3>
-        <p>Interactive, mobile-friendly interfaces.</p>
-      </div>
-      <div class="service-box">
-        <h3>Branding</h3>
-        <p>Visual identity and brand consistency.</p>
+  </section>  <!-- Services -->  <section id="services" class="services">
+    <div class="container">
+      <h2>Our Services</h2>
+      <div class="service-boxes">
+        <div class="service">
+          <h3>Graphic Design</h3>
+          <p>Logos, posters, flyers & branding that visually inspire and attract.</p>
+        </div>
+        <div class="service">
+          <h3>Web Development</h3>
+          <p>Responsive and modern websites tailored to your brand identity.</p>
+        </div>
+        <div class="service">
+          <h3>UI/UX Design</h3>
+          <p>Creating seamless experiences for your digital platforms.</p>
+        </div>
       </div>
     </div>
-  </section>
-
-  <!-- About Section -->
-  <section id="about" class="about">
-    <h2>About Us</h2>
-    <p>We’re passionate about transforming ideas into digital products that users love.</p>
-  </section>
-
-  <!-- Contact Section -->
-  <section id="contact" class="contact">
-    <h2>Let's Work Together</h2>
-    <p>Email: <a href="mailto:preciousdesigns@example.com">preciousdesigns@example.com</a></p>
-  </section>
-
-  <!-- Footer -->
-  <footer>
-    <p>&copy; 2025 Precious Portfolio. All rights reserved.</p>
-  </footer>
-
-</body>
-    </html>
+  </section>  <!-- Portfolio -->  <section id="portfolio" class="portfolio">
+    <div class="container">
+      <h2>Our Work</h2>
+      <div class="portfolio-grid">
+        <img src="images/project1.jpg" alt="Project 1">
+        <img src="images/project2.jpg" alt="Project 2">
+        <img src="images/project3.jpg" alt="Project 3">
+      </div>
+    </div>
+  </section>  <!-- About -->  <section id="about" class="about">
+    <div class="container">
+      <h2>Who We Are</h2>
+      <p>We are a team of visionary designers and developers based in Malawi, delivering quality designs with passion and creativity. Every pixel and line of code reflects our dedication.</p>
+    </div>
+  </section>  <!-- Contact -->  <section id="contact" class="contact">
+    <div class="container">
+      <h2>Contact Us</h2>
+      <p>Ready to elevate your brand? Let’s start a project together.</p>
+      <p>Email: <a href="mailto:realvisualgraphix@gmail.com">realvisualgraphix@gmail.com</a></p>
+    </div>
+  </section>  <!-- Footer -->  <footer>
+    <p>&copy; 2025 RealVisual Graphix. All rights reserved.</p>
+  </footer></body>
+  </html>
